fix overlapping

--- a/src/scss/_playerOptions.scss
+++ b/src/scss/_playerOptions.scss
@@ -47,7 +47,7 @@
 
 .dropdown-options-menu {
   position: relative;
-  width: 47.5%;
+  width: 46%;
 }
 
 .player-btn-options {
